# Scrapy-Wiki-IMDb-Movie-Info

./: README.md  pyproject.toml
wiki_movies_scraper/: movies_example.csv  scrapy.cfg
wiki_movies_scraper/wiki_movies_scraper/: items.py  middlewares.py  pipelines.py  settings.py
wiki_movies_scraper/wiki_movies_scraper/spiders/: movies_spider.py
